--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <log4j2.version>2.14.1</log4j2.version>
         <mysql-connector.version>8.0.23</mysql-connector.version>
         <junit.version>4.12</junit.version>
+        <struts-testcase.version>2.0-1.1-2.3</struts-testcase.version>
+        <slf4j.version>1.7.3</slf4j.version>
     </properties>
     <packaging>war</packaging>
     <build>
@@ -63,6 +65,34 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>strutstestcase</groupId>
+            <artifactId>strutstestcase</artifactId>
+            <version>${struts-testcase.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.1</version>
+            <type>jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j.version}</version>
         </dependency>
     </dependencies>
 </project>
